rough draft done

--- a/Tex/MC_singlemuon_performance.tex
+++ b/Tex/MC_singlemuon_performance.tex
@@ -15,7 +15,7 @@ The {\ub} TPC has active volume dimensions of 2.3 m width $\times$ 2.6 m height 
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\subsection{Performance with \sc{MCTracks}}
+\subsection{Performance with \sc{MCTracks}}\label{singlemu_mctrack_performance_section}
 
 
 \subsubsection{MCTrack Description}\label{MCTrack_section}
